[project]
description = "API to get redeem codes from Hoyoverse games"
name = "hoyo-codes"
requires-python = ">=3.12"

[tool.poetry]
authors = ["seria <seria.ati@gmail.com>"]
description = "API to get redeem codes from Hoyoverse games"
license = "GPL-3.0"
name = "hoyo-codes"
package-mode = false
readme = "README.md"
version = "2.1.1"

[tool.poetry.dependencies]
aiohttp = "^3.9.3"
beautifulsoup4 = "^4.12.3"
fake-useragent = "^1.5.1"
fastapi = "^0.112.0"
genshin = {git = "https://github.com/thesadru/genshin.py", extras = ["all"], branch = "dev"}
loguru = "^0.7.2"
lxml = "^5.2.1"
prisma = "^0.14.0"
python = "^3.12"
python-dotenv = "^1.0.1"
uvicorn = "^0.30.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
