[project]
authors = [{name = "seriaati", email = "seria.ati@gmail.com"}]
dependencies = [
  "aiohttp>=3.10.5",
  "beautifulsoup4>=4.12.3",
  "fake-useragent>=1.5.1",
  "fastapi>=0.115.0",
  "genshin",
  "loguru>=0.7.2",
  "lxml>=5.3.0",
  "prisma>=0.15.0",
  "python-dotenv>=1.0.1",
  "uvicorn>=0.30.6",
]
description = "API to get redeem codes from Hoyoverse games"
license = {file = "LICENSE"}
name = "hoyo-codes"
readme = "README.md"
requires-python = ">=3.12"
version = "2.2.1"

[tool.uv.sources]
genshin = {git = "https://github.com/thesadru/genshin.py", branch = "master"}
