[project]
authors = [{ name = "seriaati", email = "seria.ati@gmail.com" }]
dependencies = [
  "aiofiles>=24.1.0",
  "aiohttp>=3.10.5",
  "beautifulsoup4>=4.12.3",
  "fake-useragent>=1.5.1",
  "fastapi>=0.115.0",
  "genshin",
  "loguru>=0.7.2",
  "lxml>=5.3.0",
  "orjson>=3.10.18",
  "prisma>=0.15.0",
  "python-dotenv>=1.0.1",
  "uvicorn>=0.30.6",
]
description = "API to get redeem codes from Hoyoverse games"
license = { file = "LICENSE" }
name = "hoyo-codes"
readme = "README.md"
requires-python = ">=3.12"
version = "2.3.0"

[tool.uv.sources]
genshin = { git = "https://github.com/thesadru/genshin.py", branch = "master" }

[dependency-groups]
dev = ["requests>=2.32.3"]

[tool.pyright]
enableTypeIgnoreComments = false
reportIncompatibleMethodOverride = false
reportIncompatibleVariableOverride = false
reportUnnecessaryComparison = true
reportUnnecessaryContains = true
reportUnnecessaryIsInstance = true
reportUnnecessaryTypeIgnoreComment = true
typeCheckingMode = "standard"
